--- a/css/universal.css
+++ b/css/universal.css
@@ -54,7 +54,6 @@ html{
     scroll-behavior: smooth;
     cursor: none !important;
     scroll-behavior: smooth;
-    width: 100vw;
 }
 
 /*
@@ -66,8 +65,7 @@ body sits inside of the HTML tag. this is where the content of your page will go
 body{
     margin: 0;
     padding: 0;
-    width: 100vw;
-    overflow-x: clip;
+    /* overflow-x: clip; */
 }
 
 /*
